2007-11-23 [colin]	1.99.0cvs2

	* src/vcal_meeting_gtk.c
		Fix declaration in middle of block
		Thanks to wwp

2007-11-21 [colin]	1.99.0cvs1

	* src/plugin.c
	* src/vcalendar.c
		Use xdg-open if possible

2007-11-19 [paul]	1.99.0

	1.99.0 released

2007-11-19 [paul]	1.98.0cvs14

	* po/es.po
	* po/fi.po
	* po/it.po
	* po/zh_CN.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Andrea Spadaccini, and Ralph Young
						

2007-10-07 [colin]	1.98.0cvs13

	* src/vcal_manager.c
	* src/vcalendar.c
		Better fix for Solaris, thanks to Nicolas Doualot

2007-10-06 [colin]	1.98.0cvs12

	* src/vcal_meeting_gtk.c
		Remove more unused code

2007-10-06 [colin]	1.98.0cvs11

	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Fix ctime_r on Solaris

2007-10-04 [colin]	1.98.0cvs10

	* src/vcal_meeting_gtk.c
	* src/vcal_prefs.c
		Verify success on writes

2007-10-03 [colin]	1.98.0cvs9

	* libical/libical/Makefile.am
	* libical/libical/icalrecur.c
		Fix warnings

2007-10-03 [colin]	1.98.0cvs8

	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcal_prefs.c
		Fix warnings

2007-10-03 [colin]	1.98.0cvs7

	* configure.ac
		Fix missing type checks
	* src/vcal_meeting_gtk.c
		Fix warnings

2007-09-28 [colin]	1.98.0cvs6

	* libical/libical/icalcomponent.c
	* libical/libical/icalvalue.c
	* src/vcal_meeting_gtk.c
		Fix warnings

2007-09-26 [colin]	1.98.0cvs5

	* src/vcal_folder.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Fix new bugs

2007-09-26 [colin]	1.98.0cvs4

	* src/plugin.c
	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_prefs.c
	* src/vcalendar.c
		Optimise loading of inbox (My meetings) by
		better use of the cache.

2007-09-25 [colin]	1.98.0cvs3

	* src/vcal_folder.c
		A few optimisations

2007-09-25 [colin]	1.98.0cvs2

	* src/vcal_folder.c
	* src/vcal_manager.c
		Fix crash on disk full

2007-09-20 [paul]	1.98.0cvs1

	* po/it.po
		updated by Andrea Spadaccini

2007-09-03 [paul]	1.98.0

	1.98 released
